--- a/codecademy/css_setup/style.css
+++ b/codecademy/css_setup/style.css
@@ -6,3 +6,4 @@ p {
   .uppercase{text-transform:uppercase;}
   #article-title{font-family:cursive;
     text-transform:capitalize;}
+.publish-time{color: gray;}
