--- a/codecademy/css_setup/style.css
+++ b/codecademy/css_setup/style.css
@@ -7,3 +7,4 @@ p {
   .publish-time{color: gray;}
   .cursive{font-family: cursive;}
   .capitalize{text-transform: capitalize;}
+  h2.destination{font-family: cursive;}
