--- a/codecademy/css_setup/style.css
+++ b/codecademy/css_setup/style.css
@@ -8,3 +8,4 @@ p {
   .cursive{font-family: cursive;}
   .capitalize{text-transform: capitalize;}
   h2.destination{font-family: cursive;}
+  .description h5{color: teal;}
