--- a/codecademy/css_setup/style.css
+++ b/codecademy/css_setup/style.css
@@ -9,3 +9,4 @@ p {
   .capitalize{text-transform: capitalize;}
   h2.destination{font-family: cursive;}
   .description h5{color: teal;}
+  h5{color: rebeccapurple;}
