--- a/codecademy/css_setup/style.css
+++ b/codecademy/css_setup/style.css
@@ -10,3 +10,4 @@ p {
   h2.destination{font-family: cursive;}
   .description h5{color: teal;}
   h5{color: rebeccapurple;}
+  h5, p{font-family: Georgia;}
