--- a/codecademy/css_rules/style.css
+++ b/codecademy/css_rules/style.css
@@ -10,34 +10,34 @@ body {
   }
   
   h1 {
-    font-family: Georgia;
-    color: #FFF;
+    color: #FFF !important;
     font-size: 2em;
     padding-top: 100px;
-    text-align: center;
     width: 100%;
+    font-family: Georgia;
+    text-align: center;
   }
   
   h2 {
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     color: rgba(255, 255, 255, 0.5);
-    font-family: Georgia;
     font-weight: 100;
     font-size: 22px;
     line-height: 24px;
     padding-bottom: 30px;
     text-align: left;
     width: 70%;
+    font-family: Georgia;
   }
   
   p {
-    font-family: Helvetica;
-    font-size: 18px;
-    font-weight: bold;
     color: AliceBlue;
     line-height: 1.3em;
     text-align: left;
     width: 100%;
+    font-family: Helvetica;
+    font-size: 18px;
+    font-weight: bold;
   }
   
   .byline {
@@ -50,8 +50,6 @@ body {
   }
   
   .caption {
-    background-color: white;
-    color: black;
     display: block;
     font-family: 'Playfair Display', serif;
     font-size: 14px;
@@ -60,9 +58,11 @@ body {
     margin-left: 20px;
     padding: 10px;
     position: relative;
-    opacity: 0.75;
     top: 80%;
     width: 60%;
+    background-color: white;
+    color: black;
+    opacity: 0.75;
   }
   
   .content {
