--- a/nz/style.css
+++ b/nz/style.css
@@ -1,7 +1,7 @@
 body{
     max-width: 1280px;
     margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 header{
@@ -84,3 +84,4 @@ footer{
 .ml-3{
     margin-left: 0.3em;
 }
+
