--- a/nz/style.css
+++ b/nz/style.css
@@ -1,14 +1,14 @@
-body{
+body {
     max-width: 1280px;
     margin: auto;
     font-family: "Open Sans", sans-serif;
 }
 
-header{
+header {
     text-align: center;
 }
 
-header p{
+header p {
     text-align: right;
     font-weight: bold;
     font-size: 0.8em;
@@ -18,9 +18,8 @@ header p{
 
 .white,
 .white a:link,
-.white a:visited
-{
-    color:white !important
+.white a:visited {
+    color: white !important
 }
 
 header nav img {
@@ -28,30 +27,30 @@ header nav img {
 }
 
 a:link,
-a:visited{
-    color:black
+a:visited {
+    color: black
 }
 
-header address{
+header address {
     font-size: 0.9em;
     font-style: italic;
 }
 
-main{
+main {
     max-width: 70%;
     margin: auto;
 }
 
-main p{
+main p {
     text-align: justify;
 }
 
-main figure{
+main figure {
     margin-left: 0;
     width: 100%;
 }
 
-main figure img{
+main figure img {
     border: 1px solid black;
 }
 
@@ -65,28 +64,28 @@ main ul {
     list-style-type: circle;
 }
 
-footer .next{
+footer .next {
     float: right;
 }
 
-footer .back{
-    float:left;
+footer .back {
+    float: left;
 }
 
-footer{
+footer {
     padding: 1em 0 3em 0;
 }
 
-.mr-3{
+.mr-3 {
     margin-right: 0.3em;
 }
 
-.ml-3{
+.ml-3 {
     margin-left: 0.3em;
 }
 
 @media screen and (max-width: 900px) {
-    main{
+    main {
         max-width: 90%;
     }
 }
@@ -96,4 +95,3 @@ footer{
         width: 100vw;
     }
 }
-
