--- a/aws-tirol/main.css
+++ b/aws-tirol/main.css
@@ -9,7 +9,7 @@ h2{
     margin: auto;
 }
 
-.snow-label {
+.snow-label, .wind-label {
     font-size: 1.25em;
     font-weight: bold;
     display: inline;
@@ -23,32 +23,10 @@ h2{
         -1px -1px 0 white;
 }
 
-.wind-label {
-    font-size: 1.25em;
-    font-weight: bold;
-    display: inline;
-    padding: 0.3em;
-    border: 1px solid gray; 
-    background-color: silver;
-    text-shadow:
-        -1px -1px 0 white,
-        -1px -1px 0 white, 
-        -1px -1px 0 white, 
-        -1px -1px 0 white;
-}
-
-.snow-100 {
+.snow-100, .wind-10 {
     background-color: blue;
 }
 
-.snow-200 {
-    background-color: red;
-}
-
-.wind-10 {
-    background-color: blue;
-}
-
-.wind-20 {
+.snow-200, .wind-20 {
     background-color: red;
 }
