--- a/aws-tirol/main.css
+++ b/aws-tirol/main.css
@@ -1,33 +1,36 @@
-h2{
+h2 {
     text-align: center;
 }
 
-#map{
+#map {
     width: 90vw;
     height: 90vh;
     border: solid black 1px;
     margin: auto;
 }
 
-.snow-label, .wind-label {
+.snow-label,
+.wind-label {
     font-size: 1.25em;
     font-weight: bold;
     display: inline;
     padding: 0.3em;
-    border: 1px solid gray; 
+    border: 1px solid gray;
     background-color: silver;
     text-shadow:
         -1px -1px 0 white,
-        -1px -1px 0 white, 
-        -1px -1px 0 white, 
+        -1px -1px 0 white,
+        -1px -1px 0 white,
         -1px -1px 0 white;
 }
 
-.snow-100, .wind-10 {
+.snow-100,
+.wind-10 {
     background-color: blue;
 }
 
-.snow-200, .wind-20 {
+.snow-200,
+.wind-20 {
     background-color: red;
 }
 
@@ -35,7 +38,7 @@ h2{
     background-color: green;
 }
 
-.tempkl0{
+.tempkl0 {
     background-color: blue;
 }
 
@@ -44,11 +47,11 @@ h2{
     font-weight: bold;
     display: inline;
     padding: 0.3em;
-    border: 1px solid gray; 
+    border: 1px solid gray;
     background-color: silver;
     text-shadow:
         -1px -1px 0 white,
-        1px -1px 0 white, 
-        -1px 1px 0 white, 
+        1px -1px 0 white,
+        -1px 1px 0 white,
         1px 1px 0 white;
 }
